# fastapi-catalog

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: alembic.ini  exceptions.py  main.py
src/config/: logging.py  settings.py
src/crud/: catalog.py  common.py  product.py  property.py
src/db/: base.py  database.py  models.py  seed_db.py
src/dependencies/: db.py
src/migrations/: env.py
src/migrations/versions/: 02f0645d7eaa_initial_revision.py
src/routers/: catalog.py  product.py  property.py
src/schemas/: catalog.py  product.py  property.py
